--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,13 @@
     tools:context=".MainActivity"
     android:orientation="vertical"
     android:padding="20dp"
-    android:background="#fff">
+    android:background="#fff"
+    android:gravity="center">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="10dp">
+        android:gravity="center">
         
         <ImageView
             android:layout_width="120dp"
