--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -5,17 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PerfilActivity"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:orientation="vertical">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:background="@drawable/editar"/>
 
     <ImageView
         android:layout_width="130dp"
-        android:layout_height="130dp"/>
+        android:layout_height="130dp"
+        android:background="@drawable/logo_psd"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:text="Caio Costa"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
