--- a/app/src/main/res/drawable/botao.xml
+++ b/app/src/main/res/drawable/botao.xml
@@ -4,21 +4,21 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="10dip" />
-            <stroke android:width="1dip" android:color="#e57510" />
+            <stroke android:color="#e57510" />
             <gradient android:angle="-90" android:startColor="#e57510" android:endColor="#e57510"  />
         </shape>
     </item>
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="10dip" />
-            <stroke android:width="1dip" android:color="#e57510" />
+            <stroke android:color="#e57510" />
             <solid android:color="#e57510"/>
         </shape>
     </item>
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="10dip" />
-            <stroke android:width="1dip" android:color="#e57510" />
+            <stroke android:color="#e57510" />
             <gradient android:angle="-90" android:startColor="#e57510" android:endColor="#e57510" />
         </shape>
     </item>
