--- a/app/src/main/res/layout/activity_brindes.xml
+++ b/app/src/main/res/layout/activity_brindes.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
     android:orientation="vertical"
-    android:background="#fff"
     android:fitsSystemWindows="true"
     >
     <FrameLayout
@@ -46,7 +45,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     card_view:cardCornerRadius="5dp"
-                    app:cardBackgroundColor="#e5e5e5"
+                    app:cardBackgroundColor="#fff"
+                    app:cardUseCompatPadding="true"
                     >
 
                     <LinearLayout
@@ -60,7 +60,7 @@
                             android:layout_height="100dp"
                             android:layout_marginRight="15dp"
                             android:layout_gravity="center_vertical"
-                            android:background="#fff"
+                            android:background="#e5e5e5"
                             />
 
                         <LinearLayout
@@ -76,7 +76,8 @@
                                 android:layout_height="wrap_content"
                                 android:text="Brinde"
                                 android:textStyle="bold"
-                                android:textSize="18sp"
+                                android:textSize="20sp"
+                                android:textColor="#e57510"
                                 />
 
                             <LinearLayout
@@ -90,7 +91,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:textSize="14sp"
+                                    android:textSize="15sp"
                                     android:text="R$ 00,00"/>
 
                                 <Button
@@ -98,7 +99,8 @@
                                     android:layout_height="wrap_content"
                                     android:text="Comprar"
                                     android:textStyle="bold"
-                                    android:layout_marginLeft="35dp"/>
+                                    android:layout_marginLeft="35dp"
+                                    android:background="@drawable/botao"/>
 
                             </LinearLayout>
 
@@ -113,8 +115,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     card_view:cardCornerRadius="5dp"
-                    app:cardBackgroundColor="#e5e5e5"
-                    android:layout_marginTop="10dp"
+                    app:cardBackgroundColor="#fff"
+                    app:cardUseCompatPadding="true"
                     >
 
                     <LinearLayout
@@ -128,7 +130,7 @@
                             android:layout_height="100dp"
                             android:layout_marginRight="15dp"
                             android:layout_gravity="center_vertical"
-                            android:background="#fff"
+                            android:background="#e5e5e5"
                             />
 
                         <LinearLayout
@@ -144,7 +146,8 @@
                                 android:layout_height="wrap_content"
                                 android:text="Brinde"
                                 android:textStyle="bold"
-                                android:textSize="18sp"
+                                android:textSize="20sp"
+                                android:textColor="#e57510"
                                 />
 
                             <LinearLayout
@@ -158,7 +161,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:textSize="14sp"
+                                    android:textSize="15sp"
                                     android:text="R$ 00,00"/>
 
                                 <Button
@@ -166,7 +169,8 @@
                                     android:layout_height="wrap_content"
                                     android:text="Comprar"
                                     android:textStyle="bold"
-                                    android:layout_marginLeft="35dp"/>
+                                    android:layout_marginLeft="35dp"
+                                    android:background="@drawable/botao"/>
 
                             </LinearLayout>
 
@@ -181,8 +185,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     card_view:cardCornerRadius="5dp"
-                    app:cardBackgroundColor="#e5e5e5"
-                    android:layout_marginTop="10dp"
+                    app:cardBackgroundColor="#fff"
+                    app:cardUseCompatPadding="true"
                     >
 
                     <LinearLayout
@@ -196,7 +200,7 @@
                             android:layout_height="100dp"
                             android:layout_marginRight="15dp"
                             android:layout_gravity="center_vertical"
-                            android:background="#fff"
+                            android:background="#e5e5e5"
                             />
 
                         <LinearLayout
@@ -212,7 +216,8 @@
                                 android:layout_height="wrap_content"
                                 android:text="Brinde"
                                 android:textStyle="bold"
-                                android:textSize="18sp"
+                                android:textSize="20sp"
+                                android:textColor="#e57510"
                                 />
 
                             <LinearLayout
@@ -226,7 +231,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:textSize="14sp"
+                                    android:textSize="15sp"
                                     android:text="R$ 00,00"/>
 
                                 <Button
@@ -234,7 +239,8 @@
                                     android:layout_height="wrap_content"
                                     android:text="Comprar"
                                     android:textStyle="bold"
-                                    android:layout_marginLeft="35dp"/>
+                                    android:layout_marginLeft="35dp"
+                                    android:background="@drawable/botao"/>
 
                             </LinearLayout>
 
@@ -249,8 +255,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     card_view:cardCornerRadius="5dp"
-                    app:cardBackgroundColor="#e5e5e5"
-                    android:layout_marginTop="10dp"
+                    app:cardBackgroundColor="#fff"
+                    app:cardUseCompatPadding="true"
                     >
 
                     <LinearLayout
@@ -264,7 +270,7 @@
                             android:layout_height="100dp"
                             android:layout_marginRight="15dp"
                             android:layout_gravity="center_vertical"
-                            android:background="#fff"
+                            android:background="#e5e5e5"
                             />
 
                         <LinearLayout
@@ -280,7 +286,8 @@
                                 android:layout_height="wrap_content"
                                 android:text="Brinde"
                                 android:textStyle="bold"
-                                android:textSize="18sp"
+                                android:textSize="20sp"
+                                android:textColor="#e57510"
                                 />
 
                             <LinearLayout
@@ -294,7 +301,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:textSize="14sp"
+                                    android:textSize="15sp"
                                     android:text="R$ 00,00"/>
 
                                 <Button
@@ -302,7 +309,8 @@
                                     android:layout_height="wrap_content"
                                     android:text="Comprar"
                                     android:textStyle="bold"
-                                    android:layout_marginLeft="35dp"/>
+                                    android:layout_marginLeft="35dp"
+                                    android:background="@drawable/botao"/>
 
                             </LinearLayout>
 
@@ -315,12 +323,12 @@
             </TableLayout>
         </ScrollView>
     </FrameLayout>
-    <android.support.design.widget.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/nav_view"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header"
-        app:menu="@menu/drawer_view" />
-</android.support.v4.widget.DrawerLayout>
+    <!--<android.support.design.widget.NavigationView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:id="@+id/nav_view"-->
+        <!--android:layout_gravity="start"-->
+        <!--android:fitsSystemWindows="true"-->
+        <!--app:headerLayout="@layout/nav_header"-->
+        <!--/>-->
+</LinearLayout>
