--- a/app/src/main/res/layout/activity_estabelcimentos.xml
+++ b/app/src/main/res/layout/activity_estabelcimentos.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EstabelcimentosActivity"
-    android:background="#fff"
     android:orientation="vertical">
 
     <SearchView
@@ -35,7 +34,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 card_view:cardCornerRadius="5dp"
-                app:cardBackgroundColor="#e5e5e5"
+                app:cardBackgroundColor="#fff"
+                app:cardUseCompatPadding="true"
                 >
 
                 <LinearLayout
@@ -49,7 +49,7 @@
                         android:layout_height="150dp"
                         android:layout_marginRight="15dp"
                         android:layout_gravity="center_vertical"
-                        android:background="#fff"
+                        android:background="#e5e5e5"
                         />
 
                     <LinearLayout
@@ -65,107 +65,8 @@
                             android:layout_height="wrap_content"
                             android:text="Estabelecimento"
                             android:textStyle="bold"
-                            android:textSize="18sp"
-                            />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur metus nisi, hendrerit ut orci et, vehicula facilisis orci."/>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                card_view:cardCornerRadius="5dp"
-                android:layout_marginTop="10dp"
-                app:cardBackgroundColor="#e5e5e5">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="5dp">
-
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="150dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_gravity="center_vertical"
-                        android:background="#fff"
-                        />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:paddingTop="5dp"
-                        >
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Estabelecimento"
-                            android:textStyle="bold"
-                            android:textSize="18sp"
-                            />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur metus nisi, hendrerit ut orci et, vehicula facilisis orci."/>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                card_view:cardCornerRadius="5dp"
-                android:layout_marginTop="10dp"
-                app:cardBackgroundColor="#e5e5e5">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="5dp">
-
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="150dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_gravity="center_vertical"
-                        android:background="#fff"
-                        />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:paddingTop="5dp"
-                        >
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Estabelecimento"
-                            android:textStyle="bold"
-                            android:textSize="18sp"
+                            android:textSize="19sp"
+                            android:textColor="#e57510"
                             />
 
                         <TextView
