--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -14,9 +14,9 @@
         android:background="@drawable/editar"/>
 
     <ImageView
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:background="@drawable/logo_psd"
+        android:layout_width="124dp"
+        android:layout_height="124dp"
+        android:background="@drawable/usuario"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"/>
 
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Caio Costa"
+        android:text="Admin"
         android:textStyle="bold"
         android:textSize="18sp"
         android:layout_gravity="center"/>
@@ -32,16 +32,25 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="30dp"
+        android:text="Nome: Caio da Costa Carmo"
+        android:textSize="16sp"
+        android:layout_marginLeft="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:text="CPF: 480.260.038-02"
+        android:textSize="16sp"
+        android:layout_marginLeft="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:text="Email: caio.costacarmo@gmail.com"
+        android:textSize="16sp"
+        android:layout_marginLeft="20dp"/>
 
 </LinearLayout>
