--- a/app/src/main/res/layout/activity_promocoes.xml
+++ b/app/src/main/res/layout/activity_promocoes.xml
@@ -43,7 +43,8 @@
                     android:layout_height="wrap_content"
                     android:text="Promoção"
                     android:textStyle="bold"
-                    android:textSize="18sp"
+                    android:textSize="19sp"
+                    android:textColor="#e57510"
                     />
 
                 <TextView
@@ -59,6 +60,7 @@
                     android:text="Regulamento"
                     android:layout_marginTop="10dp"
                     android:layout_gravity="center"
+                    android:textColor="#fff"
                     android:background="@drawable/botao"/>
 
             </LinearLayout>
