--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -14,8 +14,8 @@
         android:background="@drawable/editar"/>
 
     <ImageView
-        android:layout_width="124dp"
-        android:layout_height="124dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:background="@drawable/usuario"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"/>
@@ -52,5 +52,86 @@
         android:text="Email: caio.costacarmo@gmail.com"
         android:textSize="16sp"
         android:layout_marginLeft="20dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Promoções que estou participando"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:layout_gravity="center"/>
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            card_view:cardCornerRadius="5dp"
+            app:cardBackgroundColor="#fff"
+            app:cardUseCompatPadding="true"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="5dp">
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="150dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="#e5e5e5"
+                    />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingTop="5dp"
+                    >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Promoção"
+                        android:textStyle="bold"
+                        android:textSize="19sp"
+                        android:textColor="#e57510"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur metus nisi, hendrerit ut orci et, vehicula facilisis orci."/>
+
+
+                    <Button
+                        android:layout_width="130dp"
+                        android:layout_height="wrap_content"
+                        android:text="Regulamento"
+                        android:layout_marginTop="10dp"
+                        android:layout_gravity="center"
+                        android:textColor="#fff"
+                        android:background="@drawable/botao"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
 
 </LinearLayout>
