--- a/app/src/main/res/layout/activity_promocoes.xml
+++ b/app/src/main/res/layout/activity_promocoes.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="5dp"
         app:cardBackgroundColor="#fff"
+        app:cardUseCompatPadding="true"
         >
 
         <LinearLayout
