--- a/app/src/main/res/layout/fragment_brindes.xml
+++ b/app/src/main/res/layout/fragment_brindes.xml
@@ -1,29 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout"
-    android:orientation="vertical"
-    android:fitsSystemWindows="true"
-    >
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:id="@+id/frame_menu"
-        >
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:theme="@style/Theme.AppCompat"
-
-            />
-    </FrameLayout>
-
-    <FrameLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/frame_brindes">
@@ -326,13 +306,5 @@
 
             </TableLayout>
         </ScrollView>
-    </FrameLayout>
-    <!--<android.support.design.widget.NavigationView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:id="@+id/nav_view"-->
-        <!--android:layout_gravity="start"-->
-        <!--android:fitsSystemWindows="true"-->
-        <!--app:headerLayout="@layout/nav_header"-->
-        <!--/>-->
+    </LinearLayout>
 </LinearLayout>
