--- a/app/src/main/res/layout/fragment_promocoes.xml
+++ b/app/src/main/res/layout/fragment_promocoes.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PromocoesActivity"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -12,6 +11,7 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
         card_view:cardCornerRadius="5dp"
         app:cardBackgroundColor="#fff"
         app:cardUseCompatPadding="true"
