--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.LoginFragment"
+    tools:context=".activity.fragments.LoginFragment"
     android:background="@drawable/suco1"
     android:focusable="true"
     android:focusableInTouchMode="true">
