--- a/app/src/main/res/layout/fragment_estabelecimentos.xml
+++ b/app/src/main/res/layout/fragment_estabelecimentos.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.fragments.EstabelecimentosFragments"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="20dp">
 
     <SearchView
         android:layout_width="match_parent"
