login ainda não funcionando

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+ <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -40,7 +40,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Usuário"
-                android:theme="@style/EditTextTheme" />
+                android:theme="@style/EditTextTheme"
+                android:id="@+id/txt_user"
+                />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -56,7 +58,9 @@
                 android:layout_height="wrap_content"
                 android:hint="Senha"
                 android:inputType="textPassword"
-                android:theme="@style/EditTextTheme"/>
+                android:theme="@style/EditTextTheme"
+                android:id="@+id/txt_password"
+                />
 
         </android.support.design.widget.TextInputLayout>
 
