--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -22,6 +22,7 @@
         android:text="Não logado"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:id="@+id/txt_login"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
 
